--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
+    <title>goit-js-hw-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -11,12 +11,14 @@
       <label>
         <input type="text" name="search-text" placeholder="Search images..." required>
       </label>
-      <button type="submit">Search</button>
+      <button class="btn-search" type="submit">Search</button>
       </form>
 
     <div class="container">
-      <span class="loader" style="display: none;"></span>
+      <span class="loader loader-top" style="display: none;"></span>
       <ul class="gallery"></ul>
+      <span class="loader loader-bottom" style="display: none;"></span>
+      <button class="btn-load-more" type="submit" style="display: none;">Load more</button>
     </div>
     
     <script type="module" src="./main.js"></script>
